[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/ui/HUD/healthBar/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/Robot/Hover.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/light/light.png" type="Texture" id=3]
[ext_resource path="res://assets/friendlies/Robot.png" type="Texture" id=4]
[ext_resource path="res://assets/light/spot.png" type="Texture" id=5]
[ext_resource path="res://assets/friendlies/Robot.gd" type="Script" id=6]
[ext_resource path="res://assets/customNodes/InteractionableBox.gd" type="Script" id=7]
[ext_resource path="res://assets/customNodes/HurtBox.gd" type="Script" id=8]
[ext_resource path="res://assets/shaders/WhiteFlash.gdshader" type="Shader" id=9]
[ext_resource path="res://Sounds/Player/Damaged.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/ui/keyIcons/EButton.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/SpeechBubble/SpeechBubble.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sounds/Robot/voice/socketStoppedCharging.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sounds/Robot/voice/firstSocket.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sounds/HealthDrop/Charge.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/ui/HUD/healthBar/HealthGain.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/HUD/healthBar/HealthLose.png" type="Texture" id=17]
[ext_resource path="res://Sounds/Player/Death.mp3" type="AudioStream" id=18]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=1]
radius = 17.0294

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.99, 1.98 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_local_to_scene = true
resource_name = "hit"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 29.0689

[sub_resource type="CanvasItemMaterial" id=10]
light_mode = 1

[sub_resource type="CircleShape2D" id=3]
radius = 17.0294

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 1024, 409 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 409, 1024, 409 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 818, 1024, 409 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 1227, 1024, 409 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 1636, 1024, 409 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 1024, 409 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 409, 1024, 409 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 818, 1024, 409 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 1227, 1024, 409 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 1636, 1024, 409 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 17 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "healthGain",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 22 ), SubResource( 34 ), SubResource( 35 ), SubResource( 25 ) ],
"loop": true,
"name": "healthLose",
"speed": 5.0
} ]

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "healthGain"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "healthGain" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.5 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "healthLose"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "healthLose" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.5 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "initialize"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.5 ), Vector2( 1, 1 ), Vector2( 0.3, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Robot" type="KinematicBody2D" groups=["persist", "robot"]]
scale = Vector2( 2, 2 )
collision_layer = 256
collision_mask = 0
script = ExtResource( 6 )
lightScaleMultiplier = 0.75

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 0, -5 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 9 )
anims/idle = SubResource( 8 )

[node name="VFXAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/hit = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 3.8147e-06, 2.91038e-11 )
texture = ExtResource( 3 )
texture_scale = 0.25
shadow_enabled = true

[node name="Spotlight" type="Sprite" parent="Light2D"]
visible = false
texture = ExtResource( 5 )

[node name="InteractionableBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionableBox"]
shape = SubResource( 2 )

[node name="Prompt" type="Sprite" parent="InteractionableBox"]
light_mask = 0
material = SubResource( 10 )
position = Vector2( 0, -50 )
scale = Vector2( 0.11, 0.11 )
texture = ExtResource( 11 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 256
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="DamagedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 18 )

[node name="VoicePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
max_distance = 10000.0
bus = "Voice"

[node name="SocketStoppedCharging" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 10.0
max_distance = 10000.0
bus = "Voice"

[node name="SpeechBubble" parent="." instance=ExtResource( 12 )]
margin_left = -182.0
margin_top = -81.0
margin_right = 218.0
margin_bottom = -36.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource( 1 )]
light_mask = 2
margin_left = 249.0
margin_top = 153.8
margin_right = 249.0
margin_bottom = 153.8
rect_scale = Vector2( 0.3, 0.5 )
health = 40.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/HealthBar"]
visible = false
position = Vector2( -40, 1.71439 )
scale = Vector2( 0.875, 0.899755 )
z_index = -10
frames = SubResource( 26 )
animation = "healthLose"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HealthBar"]
anims/RESET = SubResource( 15 )
anims/healthGain = SubResource( 12 )
anims/healthLose = SubResource( 13 )
anims/initialize = SubResource( 14 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="CanvasLayer/HealthBar"]
stream = ExtResource( 15 )

[node name="Robot" type="Sprite" parent="CanvasLayer"]
position = Vector2( 59, 137.8 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[connection signal="interacted" from="InteractionableBox" to="." method="_on_InteractionableBox_interacted"]
[connection signal="finished" from="VoicePlayer" to="." method="_on_VoicePlayer_finished"]
[connection signal="healthReachedZero" from="CanvasLayer/HealthBar" to="." method="_on_HealthBar_healthReachedZero"]
